# Thesis

./: .gitignore  README.md  TODO.md  asd.ipynb  bcl2.fasta  driver with multiprocessing.py  driver.py  installed_packages.txt  lab_notebook.md  mirna.py  pyproject.toml  requirements.txt
notebooks/: 1_generate_data.ipynb  2_generate_positive_data.ipynb  3_generate_negative_data.ipynb  4_merge_data.ipynb  5_generate_features.ipynb  6_xgb.ipynb  6_xgb_negative_data_label_as_zero.ipynb  7_process_vcfs.ipynb  WIP_extend_clash_sequences.ipynb  exploratory_notebook.ipynb  generate_feature_columns.ipynb  local_au_content.ipynb  quick_prototype_clash.ipynb  rnaduplex_case_study.ipynb  rnaduplex_w1.ipynb  symposium.ipynb  xgb_no_energy.ipynb
pipe_1_training_xgb/: 0_preprocess_clash.ipynb  1_find_matches_for_clash_data.ipynb  2_generate_positive_data.ipynb  3_generate_negative_data.ipynb  4_merge_data.ipynb  5_generate_features.ipynb  6_xgb.ipynb
pipe_2_predicting_cancer_vcf/: 0_fetch_transcripts_from_pyensembl.ipynb  10_explore_results.ipynb  7_process_vcf_and_find_matches.ipynb  8_adding_feature_cols.ipynb  9_predict_with_xgb.ipynb  WIP_case2_experiment.ipynb  WIP_close_prox.ipynb  WIP_generate_conservation.ipynb  WIP_truba.ipynb
pipeline/: 0_preprocess_clash.ipynb  1_find_matches_for_clash_data.ipynb  2_generate_positive_data.ipynb  3_generate_negative_data.ipynb  4_merge_data.ipynb  5_generate_features.ipynb  6_xgb.ipynb  7_process_vcf_and_find_matches.ipynb  8_adding_feature_cols.ipynb  9_predict_with_xgb.ipynb
results/: explore results.ipynb
sana/: dataset.csv  (+3 more)
(+189 files in other folders)
