[tool.poetry]
name = "thesis"
version = "0.1.0"
description = ""
authors = ["TasbasMN <nazifts@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0.2"
numpy = "^1.24.3"
biopython = "^1.81"
matplotlib = "^3.7.1"
regex = "^2023.6.3"
editdistance = "^0.6.2"
xgboost = "^1.7.5"
scikit-learn = "^1.2.2"

[tool.poetry.group.dev.dependencies]
icecream = "^2.1.3"
autopep8 = "^2.0.2"
ipykernel = "^6.23.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
