[tool.poetry]
name = "thesis"
version = "0.1.0"
description = ""
authors = ["TasbasMN <nazifts@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0.2"
numpy = "^1.24.3"
biopython = "^1.81"
matplotlib = "^3.7.1"
regex = "^2023.6.3"
editdistance = "^0.6.2"
xgboost = "^1.7.5"
scikit-learn = "^1.2.2"
pyensembl = "^2.2.8"
seaborn = "^0.12.2"
jinja2 = "^3.1.2"
diff-match-patch = "^20230430"
tqdm = "^4.65.0"

[tool.poetry.group.dev.dependencies]
icecream = "^2.1.3"
autopep8 = "^2.0.2"
ipykernel = "^6.23.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
